
0.2:

    * New FS implementations:
        * FTPFS:        access a plain old FTP server
        * S3FS:    access remote files stored in Amazon S3
        * RPCFS:   access remote files using a simple XML-RPC protocol
        * SFTPFS:  access remote files on a SFTP server
        * WrapFS:  filesystem that wraps an FS object and transparently
                   modifies its contents (think encryption, compression, ...)
        * LazyFS:  lazily instaniate an FS object the first time it is used
        * ReadOnlyFS:   a WrapFS that makes an fs read-only
    * Ability to expose FS objects to the outside world:
        * expose.fuse:    expose an FS object using FUSE
        * expose.xmlrpc:  expose an FS object a simple XML-RPC protocol
        * expose.sftp:    expose an FS object SFTP
        * expose.django_storage:  convert FS object to Django Storage object
    * Extended attribute support (getxattr/setxattr/delxattr/listxattrs)
    * Insist on unicode paths throughout:
        * output paths are always unicode
        * bytestring input paths are decoded as early as possible
    * Renamed "fs.helpers" to "fs.path", and renamed the contained functions
      to match those offered by os.path
    * fs.remote:  utilities for implementing FS classes that interface
                  with a remote filesystem
    * fs.errors:  updated exception hierarchy, with support for converting
                  to/from standard OSError instances
    * Added cache_hint method to base.py
